sync-two-exercise1

--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MTM6201 - Week 1</title>
+    <title>Shivan Bhardwaj</title>
 </head>
 
 <body>
-    <h1>Welcome to MTM6201 - Web Development II</h1>
+    <img src="images/self_img.JPG" alt="Self Image" title= "Shivan Bhardwaj" style="width:400px;"> 
 
+    
+    <h1>Shivan Bhardwaj</h1>
+<h2></h2>
+<dl> <dt>041011233</dt>
+    <dt>Interactive Media Design</dt>
+    <dt>MTM6201_30</dt>
+    <dt>In my free time I like to make beats for fun using Fl Studio or Logic Pro.</dt>
+
+</dl>
 
 
 </body>
